# mod_spdz_fresco_emu

./: .gitignore  CMakeLists.txt
debug_files/: spdz_fresco_emu.cfg
packaging/configs/sharemind/: spdz_fresco_emu.conf
packaging/configs/sharemind/conf.d/: mod-spdz_fresco_emu.conf
packaging/debian/: conffiles
src/: SpdzFrescoConfiguration.cpp  SpdzFrescoConfiguration.h  SpdzFrescoModule.cpp  SpdzFrescoModule.h  SpdzFrescoPD.cpp  SpdzFrescoPD.h  SpdzFrescoPDPI.cpp  SpdzFrescoPDPI.h  ValueTraits.h  mod_spdz_fresco_emu.cpp
src/Syscalls/: Common.h  CoreSyscalls.h  Meta.h
